# whisper-latex-dictation

./: Cargo.toml  README.md
src/: audio.rs  gemini.rs  keyboard.rs  main.rs  output.rs  timeline.rs  transcription.rs
