[package]
name = "dictation"
version = "0.1.0"
edition = "2024"

[dependencies]
whisper-rs = "0.11"
cpal = "0.15"
rdev = "0.5"
google-generative-ai-rs = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
hound = "3.5" # Useful for debugging audio if needed
